src/atoms/text_link/text_link.scss
.atm-text_link {
  color: $colorBlack60;
  text-decoration: none;
  border-bottom: 1px solid $colorCyan;
  height: $sizeLineHeightBase;
  cursor: pointer;

  &--icon {
    border: none;
  }

  .icon {
    fill: $colorBlack60;

    &--iframe-add {
      transform: scale(0.9167);
      margin-right: 9px;
    }

    &--iframe-arrow {
      margin-left: 7px;
    }
  }

  &:hover {
    color: $colorBlack;
    border-color: $colorBlack;

    .icon {
      fill: $colorBlack;
    }
  }
}

